[package]
name = "kg-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
tokio = { version = "*", features = ["full"] }
neo4rs = "*"
lazy_static = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
axum-macros = "*"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
